Don't specify hover behavior on touch devices, to prevent getting "stuck" (my Galaxy S3)

--- a/src/css/fimage-tools.css
+++ b/src/css/fimage-tools.css
@@ -55,7 +55,7 @@
   line-height: 43px;
   font-family: sans-serif;
 }
-.fimage-tools__tool:hover {
+.fimage-tools__tool--hover:hover {
   background-color: #222;
 }
 
